--- a/src/App.scss
+++ b/src/App.scss
@@ -11,10 +11,18 @@ body {
     text-align: center;
     font-size: 1.6rem;
 
+    .footer {
+      background-color: white;
+      color: blue;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
     .employee {
       background-color: #222;
       padding: 10px;
       margin: 10px 0 10px 0;
+      border-radius: 10px;
       .title {
         color: rgb(177, 177, 100);
       }
