--- a/src/App.scss
+++ b/src/App.scss
@@ -12,12 +12,9 @@ body {
     font-size: 1.6rem;
 
     .footer {
-      background-color: white;
-      color: blue;
+      color: red;
       padding: 20px;
-      border-radius: 10px;
     }
-
     .employee {
       background-color: #222;
       padding: 10px;
