--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,17 @@ body {
     padding: 20px;
     text-align: center;
     font-size: 1.6rem;
+    .firmnamelogo {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      img {
+        width: 100px;
+        height: 100px;
+      }
+    }
 
     .footer {
       color: red;
