--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,12 @@
 body {
-  background-color: #333;
+  background-color: #398ab9;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 
   .App {
-    color: grey;
+    color: #fdeff4;
     padding: 20px;
     text-align: center;
     font-size: 1.6rem;
