--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  align-content: center;
   flex-direction: column;
 
   .App {
